# pemi

./: README.md  pyproject.toml  requirements.txt  run.py  run.spec  setup.cfg
src/: basic.py  consts.py  lock.py  main.py  mdi.py  models.py  param_bank.py  tab.py  threads.py  util.py
src/dialog/: param.py
src/pemi/: consts.py  main.py  models.py  threads.py  util.py
src/pemi/dialog/: lock.py  param.py
src/pemi/ui/: basic.ui  main.ui  param.ui  param_dialog.ui
src/pemi/widget/: basic.py  param.py  ps.py  tab.py
src/ui/: basic.ui  lock.ui  main.ui  mdi.ui  param.ui
src/widget/: basic.py  param.py
tests/: test_connect.py
